--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "bootstrap": "^5.0.1",
+    "chart.js": "^3.3.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
